# usdtweak

./: .clang-format  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: macos_installer.cmake  stamp.cmake  stamp.cpp.in  stamp.h.in  windows_installer.cmake
cmake/houdini/: pxrConfig.cmake
src/: Blueprints.cpp  Blueprints.h  CMakeLists.txt  CommandLineOptions.cpp  CommandLineOptions.h  Constants.h  Debug.cpp  Debug.h  Editor.cpp  Editor.h  EditorSettings.cpp  EditorSettings.h  GeometricFunctions.h  Gui.h  ImGuiHelpers.cpp  ImGuiHelpers.h  ProxyHelpers.h  Selection.cpp  Selection.h  UsdHelpers.cpp  UsdHelpers.h  main.cpp
src/commands/: AttributeCommands.cpp  CMakeLists.txt  CommandLayerStateDelegate.cpp  CommandLayerStateDelegate.h  CommandStack.cpp  CommandStack.h  Commands.cpp  Commands.h  CommandsImpl.cpp  CommandsImpl.h  EditorCommands.cpp  LayerCommands.cpp  PrimCommands.cpp  SdfCommandGroup.cpp  SdfCommandGroup.h  SdfCommandGroupRecorder.cpp  SdfCommandGroupRecorder.h  SdfLayerInstructions.cpp  SdfLayerInstructions.h  SdfUndoRecorder.cpp  SdfUndoRecorder.h  SdfUndoRedoRecorder.cpp  SdfUndoRedoRecorder.h  Shortcuts.h  UndoLayerStateDelegate.cpp  UndoLayerStateDelegate.h  UndoRedoCommands.cpp  UsdAPICommands.cpp
src/resources/: CMakeLists.txt  DefaultImGuiIni.h  ResourcesLoader.cpp  ResourcesLoader.h  embed_text.cmake  icon.icns  resources.rc
src/resources/glsl/: GridFrag.glsl  GridVert.glsl  ManipulatorFrag.glsl  ManipulatorVert.glsl  PositionManipulatorFrag.glsl  PositionManipulatorVert.glsl  RotationManipulatorFrag.glsl  RotationManipulatorVert.glsl
src/resources/ini/: imgui.ini
src/viewport/: CMakeLists.txt  CameraEditor.cpp  CameraEditor.h  CameraManipulator.cpp  CameraManipulator.h  CameraRig.cpp  CameraRig.h  Grid.cpp  Grid.h  ImagingSettings.cpp  ImagingSettings.h  Manipulator.cpp  Manipulator.h  MouseHoverEditor.cpp  MouseHoverEditor.h  MouseHoverManipulator.cpp  MouseHoverManipulator.h  Playblast.cpp  Playblast.h  PositionManipulator.cpp  PositionManipulator.h  RendererSettings.cpp  RendererSettings.h  RotationManipulator.cpp  RotationManipulator.h  ScaleManipulator.cpp  ScaleManipulator.h  SelectionEditor.cpp  SelectionEditor.h  SelectionManipulator.cpp  SelectionManipulator.h  TranslateGizmo.cpp  TranslateGizmo.h  TranslateManipulator.cpp  TranslateManipulator.h  TranslationEditor.cpp  TranslationEditor.h  Viewport.cpp  Viewport.h  ViewportCameras.cpp  (+3 more)
src/widgets/: ArrayEditor.cpp  ArrayEditor.h  CMakeLists.txt  CompositionEditor.cpp  CompositionEditor.h  ConnectionEditor.cpp  ConnectionEditor.h  ContentBrowser.cpp  ContentBrowser.h  Debug.cpp  Debug.h  EditListSelector.h  FieldValueTable.h  FileBrowser.cpp  FileBrowser.h  LauncherBar.cpp  LauncherBar.h  LayerEditor.cpp  LayerEditor.h  LayerHierarchyEditor.cpp  LayerHierarchyEditor.h  ModalDialogs.cpp  ModalDialogs.h  PrimSpecEditor.cpp  PrimSpecEditor.h  PropertyEditor.cpp  PropertyEditor.h  ReferenceEditor.cpp  ReferenceEditor.h  RendererSettings.cpp  RendererSettings.h  SdfAttributeEditor.cpp  SdfAttributeEditor.h  SdfLayerEditor.cpp  SdfLayerEditor.h  SdfLayerSceneGraphEditor.cpp  SdfPrimEditor.cpp  SdfPrimEditor.h  StageLayerEditor.cpp  StageLayerEditor.h  (+24 more)
